# FFmpeg-Input

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.py38  README.md  pyproject.toml  test.py  test_autoconvert.py  test_decode.py
.github/: ci.yml
.github/workflows/: ci-new.yml  ci.yml
docker/: Dockerfile.manylinux_2_28_ARM64  Dockerfile.manylinux_2_28_X64  Dockerfile.py310  Dockerfile.py38  Dockerfile.py39  Dockerfile.u2004  Dockerfile.u2204  build-manylinux.sh  gather-deps.sh  install-basic-deps-manylinux.sh  install-basic-deps-u2004.sh  install-basic-deps.sh
src/: lib.rs
utils/: install-basic-deps-jetson.sh
