[package]
name = "ffmpeg_input"
authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>"]
description = "FFMpeg Source Accessor Library"
homepage = "https://github.com/insight-platform/FFmpeg-Input"
repository = "https://github.com/insight-platform/FFmpeg-Input"
readme = "README.md"
keywords = ["FFmpeg", "Video"]
categories = ["computer-vision"]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.62"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0"
derive_builder = "0.20"
crossbeam = "0.8"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"

[dependencies.ffmpeg-next]
version = "7"
features = ["default"]

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = { version = "0.22" }

[profile.release]
opt-level = 3
codegen-units = 1
