[build-system]
requires = ["maturin>=1.4,<=1.7"]
build-backend = "maturin"

[project]
version = "0.2.1"
name = "ffmpeg_input"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.black]
skip-string-normalization = true

[tool.pylint.messages_control]
max-line-length = 88
